Fix image spacing and touch lightbox

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -299,3 +299,7 @@ body .layout--narrow {
     right: auto;
   }
 }
+.isToucDevice .lightbox--nav:hover {
+  opacity: .5;
+  background: none;
+}
